--- a/events.css
+++ b/events.css
@@ -1,46 +1,43 @@
-*{
-	box-sizing: border-box;
-}
 html{
-	font-size: 1.3em;
+	font-size: 2em;
 }
+
 .wrap{
-	border: 1px solid #000;
-	height: 600px;
 	width: 50%;
 	margin: 0 auto;
-	display: flex;
-}
-.left{
-	height: 100%;
-	width: 20%;
-	border: 1px solid #000;
-	padding: 10px;
-}
-.vertical-text{
-	font-size: 4em;
-	margin-top: 390px;
-	transform: rotate(270deg);
-	cursor: vertical-text;
-}
-.chief-link{
-	display: flex;
-	flex-direction: column;
 }
 
-.right{
-	border: 1px solid #000;
-	width: 100%;
-	height: 100%;
-
+header{
 	display: flex;
-	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
 }
+h1, a{
+	display: block;
+	margin: 0;
+	height: 100%;
+}
+
 table{
 	width: 100%;
-	height: 50%;
-	border-collapse: collapse;
+}
+thead tr td{
+	background: orange;
+	width: 100%;
+	text-align: center;
 }
 tr{
-	border: 1px solid #000;
+	display: flex;
+}
+.child {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	padding: 10px;
+	box-sizing: border-box;
+	white-space: nowrap;
+	flex-wrap: nowrap;
+}
+.child:nth-of-type(2){
+	width: 100%;
 }
