--- a/events.css
+++ b/events.css
@@ -1,9 +1,12 @@
+*{
+	box-sizing: border-box;
+}
 html{
 	font-size: 2em;
 }
 
 .wrap{
-	width: 50%;
+	width: 80%;
 	margin: 0 auto;
 }
 
@@ -35,9 +38,11 @@ tr{
 	text-align: center;
 	padding: 10px;
 	box-sizing: border-box;
-	white-space: nowrap;
 	flex-wrap: nowrap;
+	white-space: nowrap;
+	align-items: center;
 }
 .child:nth-of-type(2){
-	width: 100%;
+	width: 90%;
+	white-space: unset;
 }
